--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*
 *{
     background-color: bisque;
 }
@@ -16,4 +17,53 @@ text-align: center ;
 padding: 8px ;
 box-shadow: 0 0 10px black;
 background-color: rgb(0, 0, 0, 0.8);
+} 
+*/
+
+*{
+//    background-color: bisque;
+    background-color: rgb(38, 38, 38);
+
 }
+table{
+height : 100px;
+width:  300px;
+margin: 30px auto;
+border-radius:20px ;
+padding:20px ;
+//background-color: rgb(0, 0, 0, 0.6);
+background-color: rgb(156, 169, 134);
+color: white;
+
+}
+
+th{
+
+border-radius:5px ;
+text-align: center ;
+padding: 8px ;
+box-shadow: 0 0 5px black;
+//background-color: rgb(0, 0, 0, 0.8);
+background-color: rgb(156, 169, 134);
+margin:0 10px ;
+}
+
+
+
+
+.a{
+     margin: 20px ;
+    padding: 10px ;
+    font-size: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 900;
+    
+	
+
+	
+	
+
+}
+
+
+
